# spot-project

./: CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  TODO.md
scripts/: cp-sounds.sh  install.sh  redeploy.sh  reinstall.sh  setup.sh
spot-cli/: Cargo.toml  spot-cli-completions.zsh
spot-cli/src/: cli.rs  fetcher.rs  handler.rs  main.rs  picker.rs
spot-daemon/: Cargo.toml
spot-daemon/src/: config.rs  database.rs  handler.rs  main.rs  notify.rs  service.rs  utils.rs
spot-daemon/src/models/: pomodoro.rs
spot-daemon/src/service/: api.rs  pomodoro.rs
spot-deamon/: Cargo.toml
spot-deamon/src/: config.rs  database.rs  handler.rs  main.rs  notify.rs  pomodoro.rs  service.rs  utils.rs
spot-deamon/src/models/: pomodoro.rs
spot-deamon/src/service/: pomodoro.rs
spot-lib/: Cargo.toml
spot-lib/src/: lib.rs
templates/: spotdaemon.service  spotdeamon.service
