[package]
name = "spot-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
notify-rust = "4.11.0"
rodio = "0.17.3"
rusqlite = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

spot-lib = { path = "../spot-lib" } # Dev
tokio = { version = "1.37.0" , features = ["full"] }
