[package]
name = "spot-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
notify-rust = "4.11.0"
rodio = "0.17.3"
rusqlite = { version = "0.31.0", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0" , features = ["full"] }

spot-lib = { path = "../spot-lib" } # Dev
